--- a/XamarinFormsExamples/ListViewCRUD/View/DepartmentView.xaml
+++ b/XamarinFormsExamples/ListViewCRUD/View/DepartmentView.xaml
@@ -9,6 +9,8 @@
             <Entry Text="{Binding DepartmentName}" TextColor="Black" FontSize="23"></Entry>
             <Button Text="Add" FontSize="23" Command="{Binding Path=BindingContext.AddCommand,
                 Source={x:Reference Departmentview}}"></Button>
+            <Button Text="Update" FontSize="23" Command="{Binding Path=BindingContext.UpdateButton,
+                Source={x:Reference Departmentview}}"></Button>
             <ListView ItemsSource="{Binding Departments}"
                        HeightRequest="20">
                 <ListView.ItemTemplate>
@@ -17,6 +19,8 @@
                                   TextColor="Black" DetailColor="Aqua">
                             <TextCell.ContextActions>
                                 <MenuItem Text="Delete" Command="{Binding Path=BindingContext.DeleteCommand,
+                                    Source={x:Reference Departmentview}}" CommandParameter="{Binding .}"></MenuItem>
+                                <MenuItem Text="Update" Command="{Binding Path=BindingContext.UpdateCommand,
                                     Source={x:Reference Departmentview}}" CommandParameter="{Binding .}"></MenuItem>
                             </TextCell.ContextActions>
                         </TextCell>
