--- a/XamarinFormsExamples/MVVMMasterDetailPage/View/About.xaml
+++ b/XamarinFormsExamples/MVVMMasterDetailPage/View/About.xaml
@@ -7,7 +7,7 @@
              x:Class="XamarinFormsExamples.MVVMMasterDetailPage.View.About">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Menu!!!!!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
