--- a/XamarinFormsExamples/SQLiteExample/PeopleView.xaml
+++ b/XamarinFormsExamples/SQLiteExample/PeopleView.xaml
@@ -13,7 +13,11 @@
             <ListView x:Name="ltsView">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextCell Text="{Binding FirstName}" Detail="{Binding LastName}"></TextCell>
+                        <TextCell Text="{Binding FirstName}" Detail="{Binding LastName}">
+                            <TextCell.ContextActions>
+                                <MenuItem Text="Delete" Clicked="PeopleDelete" CommandParameter="{Binding .}"></MenuItem>
+                            </TextCell.ContextActions>
+                        </TextCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
